manifests/dev/frontend/Deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: demo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
    spec:
      containers:
        - env:
            - name: LOCATOR_URL
              value: http://locator.demo.svc.cluster.local:3000
          image: ghcr.io/fkouhai/rss_frontend-x86_64-linux:0.5.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 4321
            initialDelaySeconds: 5
            periodSeconds: 10
          name: frontend
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 4321
            initialDelaySeconds: 5
            periodSeconds: 10
      securityContext:
        fsGroup: 1000
