manifests/dev/frontend/Service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: demo
spec:
  ports:
    - name: http
      port: 4321
  selector:
    app.kubernetes.io/name: frontend
