manifests/dev/frontend/Ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: demo
spec:
  rules:
    - host: rss.fkouhailabs.net
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 4321
            path: /
            pathType: Prefix
